Added user to swagger
